--- a/Example.ipynb
+++ b/Example.ipynb
@@ -21,7 +21,8 @@
    },
    "outputs": [],
    "source": [
-    "build=False\n",
+    "build   = False\n",
+    "binpath = \"./build/sdf-weighted-delaunay\"\n",
     "\n",
     "import os\n",
     "if build:\n",
@@ -30,7 +31,7 @@
     "    !cmake -B build -DCGAL_DIR=./cgal \n",
     "    !cmake --build build/ --parallel\n",
     "    \n",
-    "if os.path.exists(\"./build/sdf-weighted-delaunay\"): \n",
+    "if os.path.exists(binpath): \n",
     "    print(\"Executable Available\")\n",
     "else:\n",
     "    print(\"Error: Executable not available\")"
@@ -48,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06343b6d",
+   "id": "5fadc42a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,66 +63,36 @@
     "    print()\n",
     "    print(filename)\n",
     "else:\n",
-    "    print(\"Found .obj file\")\n",
-    "    \n",
-    "import numpy as np\n",
-    "\n",
-    "def sample_positions(n, random_sampling, sdf):\n",
-    "    if random_sampling:\n",
-    "        U = (np.random.rand(n*n*n, 3)-0.5)*2\n",
-    "    else:\n",
-    "        gx, gy, gz = np.meshgrid(np.linspace(-1.0, 1.0, n+1), np.linspace(-1.0, 1.0, n+1), np.linspace(-1.0, 1.0, n+1))\n",
-    "        U = np.vstack((gx.flatten(), gy.flatten(), gz.flatten())).T\n",
-    "    U_sdfvals = sdf(U)\n",
-    "    return U, U_sdfvals\n",
-    "\n",
-    "import gpytoolbox as gpy\n",
-    "\n",
-    "# Set up gt\n",
-    "V_gt, F_gt = gpy.read_mesh(mesh_path)\n",
-    "V_gt = gpy.normalize_points(V_gt)\n",
-    "\n",
-    "s = 0.9 # 0.75\n",
-    "V_gt *= s/0.5\n",
-    "\n",
-    "# Create and abstract SDF function that is the only connection to the shape\n",
-    "sdf = lambda x: gpy.signed_distance(x, V_gt, F_gt)[0]"
+    "    print(\"Found .obj file\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "64e3c280",
+   "id": "45a54344",
    "metadata": {},
    "source": [
-    "# Contouring:"
+    "# Contouring"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51e512d7",
+   "id": "c84d20e6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# number of samples per dimensions\n",
-    "n = 20\n",
+    "N = 10\n",
+    "max_refinement = 10000\n",
     "\n",
-    "# Sample SDF values on a regular grid\n",
-    "U, U_sdfvals = sample_positions(n,False,sdf)\n",
-    "\n",
-    "gridpath = \"./cgal/tmp.csv\"\n",
-    "np.savetxt(gridpath, np.concatenate([U,U_sdfvals[:,None]],axis=1), delimiter=\",\")\n",
-    "\n",
-    "!{cgalbinpath} {gridpath}\n",
-    "cgal_pwns = np.genfromtxt('./pwn.csv', delimiter=',')"
+    "!{binpath} {mesh_path} {N} {max_refinement}"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Blender",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "blender"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -133,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
