Update example to recreate RC recs from Fig. 7

--- a/Example.ipynb
+++ b/Example.ipynb
@@ -39,11 +39,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dab55bf5",
+   "id": "28cbe7ac",
    "metadata": {},
    "source": [
-    "# SDF sampling\n",
-    "The re-sampling requires a sdf function that can be evaluated. This example uses a ground truth mesh and the `signed_distance` function provided by the `gpytoolbox` package."
+    "# Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "328708d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_folder = \"data\"\n",
+    "if not os.path.exists(\"data\"):\n",
+    "    os.mkdir(\"data\")\n",
+    "    \n",
+    "mesh_paths     = {\"armadillo\" : \"data/armadillo.obj\"}\n",
+    "download_paths = {\"armadillo\" : \"https://raw.githubusercontent.com/alecjacobson/common-3d-test-models/refs/heads/master/data/armadillo.obj\"}\n",
+    "                  "
    ]
   },
   {
@@ -54,12 +69,13 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "# Download the Armadillo from github if it is not available already\n",
-    "mesh_path = \"armadillo.obj\"\n",
-    "if not os.path.exists(mesh_path) and mesh_path == \"armadillo.obj\":\n",
+    "# Download meshes if they're not available\n",
+    "mesh_name = \"armadillo\"\n",
+    "\n",
+    "if not os.path.exists(mesh_paths[mesh_name]):\n",
     "    import wget\n",
-    "    url = 'https://raw.githubusercontent.com/alecjacobson/common-3d-test-models/refs/heads/master/data/armadillo.obj'\n",
-    "    filename = wget.download(url)\n",
+    "    url = download_paths[mesh_name]\n",
+    "    filename = wget.download(url,out=mesh_paths[mesh_name])\n",
     "    print()\n",
     "    print(filename)\n",
     "else:\n",
@@ -68,23 +84,89 @@
   },
   {
    "cell_type": "markdown",
+   "id": "82790f0a",
+   "metadata": {},
+   "source": [
+    "# Contouring\n",
+    "\n",
+    "We reference and recreate some figures from\n",
+    "- [KA25] Kohlbrenner, M. and Alexa, M. (2025), Isosurface Extraction for Signed Distance Functions using Power Diagrams. Computer Graphics Forum, 44: e70037. https://doi.org/10.1111/cgf.70037"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82a19152",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_folder = \"./output\"\n",
+    "if not os.path.exists(out_folder):\n",
+    "    os.mkdir(out_folder)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "45a54344",
    "metadata": {},
    "source": [
-    "# Contouring"
+    "## Regular Contouring $\\mathbf{RC}$\n",
+    "Regular contouring ($\\mathbf{RC}$ in [KA25]) contours the regular triangulation without refinement.\n",
+    "\n",
+    "As an example, the top row of Fig. 7 [KA25] can be recreated as follows. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "c84d20e6",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "mesh_path = mesh_paths[\"armadillo\"]\n",
+    "Ns = [21,51,71]\n",
+    "max_refinement = 0\n",
+    "delaunay = False\n",
+    "for N in Ns:\n",
+    "    !{binpath} {mesh_path} {N} {max_refinement} {1 if delaunay else 0} {out_folder}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5ff2393",
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 10\n",
-    "max_refinement = 10000\n",
+    "import numpy as np\n",
+    "import polyscope as ps\n",
+    "from matplotlib.colors import to_rgb\n",
     "\n",
-    "!{binpath} {mesh_path} {N} {max_refinement}"
+    "camera_views = {\"armadillo\" : (v_ := np.array([0.,0.,-1.])*2.8,-v_) } \n",
+    "\n",
+    "from gpytoolbox import read_mesh\n",
+    "ps.init()\n",
+    "ps.set_ground_plane_mode(\"none\")\n",
+    "\n",
+    "screenshots = {}\n",
+    "for N in Ns:\n",
+    "    V, F = read_mesh(os.path.join(out_folder, f\"armadillo.obj_RegMTR_{N}_0.obj\"))\n",
+    "    ps.remove_all_structures()\n",
+    "    ps.register_surface_mesh(\"arma21\", V, F, color=to_rgb(\"tab:green\"))\n",
+    "    ps.look_at(*camera_views[\"armadillo\"])\n",
+    "    screenshots[N] = ps.screenshot_to_buffer()   \n",
+    "    \n",
+    "import matplotlib.pyplot as plt\n",
+    "fig, axs = plt.subplots(1,3,figsize=(20,10))\n",
+    "\n",
+    "for ni,(N,im) in enumerate(screenshots.items()):\n",
+    "    ax = axs[ni]\n",
+    "    ax.set_title(N,fontsize=20)\n",
+    "    ax.imshow(screenshots[N][200:-200,800:-800])\n",
+    "    ax.axis(\"off\")\n",
+    "plt.show()"
    ]
   }
  ],
@@ -104,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
