Add the example for the firebird rec

--- a/Example.ipynb
+++ b/Example.ipynb
@@ -56,8 +56,10 @@
     "if not os.path.exists(\"data\"):\n",
     "    os.mkdir(\"data\")\n",
     "    \n",
-    "mesh_paths     = {\"armadillo\" : \"data/armadillo.obj\"}\n",
-    "download_paths = {\"armadillo\" : \"https://raw.githubusercontent.com/alecjacobson/common-3d-test-models/refs/heads/master/data/armadillo.obj\"}\n",
+    "mesh_paths     = {\"armadillo\" : \"data/armadillo.obj\", \n",
+    "                  \"firebird\"  : \"data/oiseaux_de_feu.obj\"}\n",
+    "download_paths = {\"armadillo\" : \"https://raw.githubusercontent.com/alecjacobson/common-3d-test-models/refs/heads/master/data/armadillo.obj\",\n",
+    "                  \"firebird\"  : \"https://raw.githubusercontent.com/odedstein/reach-for-the-arcs-code/refs/heads/main/data/oiseau_de_feu.obj\"}\n",
     "                  "
    ]
   },
@@ -65,21 +67,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5fadc42a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
     "# Download meshes if they're not available\n",
-    "mesh_name = \"armadillo\"\n",
-    "\n",
-    "if not os.path.exists(mesh_paths[mesh_name]):\n",
-    "    import wget\n",
-    "    url = download_paths[mesh_name]\n",
-    "    filename = wget.download(url,out=mesh_paths[mesh_name])\n",
-    "    print()\n",
-    "    print(filename)\n",
-    "else:\n",
-    "    print(\"Found .obj file\")"
+    "for mesh_name in mesh_paths.keys():\n",
+    "    if not os.path.exists(mesh_paths[mesh_name]):\n",
+    "        import wget\n",
+    "        url = download_paths[mesh_name]\n",
+    "        filename = wget.download(url,out=mesh_paths[mesh_name])\n",
+    "        print()\n",
+    "        print(f\"Downloaded {mesh_name} to {filename}\")\n",
+    "    else:\n",
+    "        print(f\"Found .obj file for {mesh_name}\")"
    ]
   },
   {
@@ -125,7 +128,8 @@
    },
    "outputs": [],
    "source": [
-    "mesh_path = mesh_paths[\"armadillo\"]\n",
+    "mesh_name = \"armadillo\"\n",
+    "mesh_path = mesh_paths[mesh_name]\n",
     "Ns = [21,51,71]\n",
     "max_refinement = 0\n",
     "delaunay = False\n",
@@ -148,6 +152,7 @@
     "\n",
     "from gpytoolbox import read_mesh\n",
     "ps.init()\n",
+    "ps.set_up_dir(\"y_up\")\n",
     "ps.set_ground_plane_mode(\"none\")\n",
     "\n",
     "screenshots = {}\n",
@@ -159,12 +164,85 @@
     "    screenshots[N] = ps.screenshot_to_buffer()   \n",
     "    \n",
     "import matplotlib.pyplot as plt\n",
-    "fig, axs = plt.subplots(1,3,figsize=(20,10))\n",
+    "fig, axs = plt.subplots(1,3,figsize=(20,8))\n",
     "\n",
+    "fig.suptitle(\"$\\mathbf{RC}$\",fontsize=30)\n",
     "for ni,(N,im) in enumerate(screenshots.items()):\n",
     "    ax = axs[ni]\n",
-    "    ax.set_title(N,fontsize=20)\n",
+    "    ax.set_title(f\"N=${N}$\" ,fontsize=20)\n",
     "    ax.imshow(screenshots[N][200:-200,800:-800])\n",
+    "    ax.axis(\"off\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56673dbb",
+   "metadata": {},
+   "source": [
+    "# Incremental Contouring $\\mathbf{RC}_{C}$\n",
+    "\n",
+    "For the incremental contouring, specify the max_refinements argument"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0255cc65",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "mesh_name = \"firebird\"\n",
+    "mesh_path = mesh_paths[mesh_name]\n",
+    "N = 10\n",
+    "max_refinements = [0,1000,2000,3000]\n",
+    "delaunay = False\n",
+    "for max_refinement in max_refinements:\n",
+    "    !{binpath} {mesh_path} {N} {max_refinement} {1 if delaunay else 0} {out_folder}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0b1b715",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import polyscope as ps\n",
+    "from matplotlib.colors import to_rgb\n",
+    "\n",
+    "camera_views = {\"firebird\" : (v_ := np.array([0.7,0.,-1.])*2.2,-v_) } \n",
+    "\n",
+    "from gpytoolbox import read_mesh\n",
+    "ps.init()\n",
+    "ps.set_ground_plane_mode(\"none\")\n",
+    "ps.set_up_dir(\"neg_y_up\")\n",
+    "\n",
+    "screenshots = {}\n",
+    "for mr in max_refinements:\n",
+    "    V, F = read_mesh(os.path.join(out_folder, f\"oiseaux_de_feu.obj_RegMTR_{N}_{mr}.obj\"))\n",
+    "    ps.remove_all_structures()\n",
+    "    ps.register_surface_mesh(\"fb\", V, F, color=to_rgb(\"tab:green\"))\n",
+    "    ps.look_at(*camera_views[\"firebird\"])\n",
+    "    screenshots[mr] = ps.screenshot_to_buffer()   \n",
+    "    \n",
+    "import matplotlib.pyplot as plt\n",
+    "fig, axs = plt.subplots(1,4,figsize=(20,6))\n",
+    "\n",
+    "fig.suptitle(\"$\\mathbf{RC}_R$\",fontsize=30)\n",
+    "for ni,(mr,im) in enumerate(screenshots.items()):\n",
+    "    ax = axs[ni]\n",
+    "    ttl_ = f\"${N}^3$\" \n",
+    "    if mr > 0:\n",
+    "        ttl_ += f\"$+ {mr}R$\"\n",
+    "    ax.set_title(ttl_,fontsize=20)\n",
+    "\n",
+    "    ax.imshow(screenshots[mr][100:-100:,700:-700])\n",
     "    ax.axis(\"off\")\n",
     "plt.show()"
    ]
