Update the example notebook

--- a/Example.ipynb
+++ b/Example.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e3f6b559",
+   "id": "fe491ece",
+   "metadata": {},
+   "source": [
+    "# Example Notebook\n",
+    "\n",
+    "This notebok demonstrates how to build and use the reference implementation for our paper:\n",
+    "- [KA25] Kohlbrenner, M. and Alexa, M. (2025), Isosurface Extraction for Signed Distance Functions using Power Diagrams. Computer Graphics Forum, 44: e70037. https://doi.org/10.1111/cgf.70037"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8443238a",
    "metadata": {},
    "source": [
     "# Building\n",
@@ -83,17 +94,6 @@
     "        print(f\"Downloaded {mesh_name} to {filename}\")\n",
     "    else:\n",
     "        print(f\"Found .obj file for {mesh_name}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "82790f0a",
-   "metadata": {},
-   "source": [
-    "# Contouring\n",
-    "\n",
-    "We reference and recreate some figures from\n",
-    "- [KA25] Kohlbrenner, M. and Alexa, M. (2025), Isosurface Extraction for Signed Distance Functions using Power Diagrams. Computer Graphics Forum, 44: e70037. https://doi.org/10.1111/cgf.70037"
    ]
   },
   {
@@ -180,9 +180,13 @@
    "id": "56673dbb",
    "metadata": {},
    "source": [
-    "# Incremental Contouring $\\mathbf{RC}_{C}$\n",
+    "# Incremental Contouring $\\mathbf{RC}_{R}$\n",
     "\n",
-    "For the incremental contouring, specify the max_refinements argument"
+    "For the incremental contouring, specify the max_refinements argument. \n",
+    "The code below recreates [KA25] Fig.14 (top two rows).\n",
+    "\n",
+    "Note that the results for the Delaunay refinement $\\mathbf{DC}_D$ can differ from what is shown in the paper. \n",
+    "The order in which the tets get refined depends on their insertion into a queue and this order has been changed during code optimisation."
    ]
   },
   {
@@ -199,6 +203,13 @@
     "N = 10\n",
     "max_refinements = [0,1000,2000,3000]\n",
     "delaunay = False\n",
+    "\n",
+    "# Run REGULAR refinement\n",
+    "for max_refinement in max_refinements:\n",
+    "    !{binpath} {mesh_path} {N} {max_refinement} {1 if delaunay else 0} {out_folder}\n",
+    "    \n",
+    "# Run DELAUNAY refinement (as a comparison)\n",
+    "delaunay = True\n",
     "for max_refinement in max_refinements:\n",
     "    !{binpath} {mesh_path} {N} {max_refinement} {1 if delaunay else 0} {out_folder}"
    ]
@@ -206,10 +217,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0b1b715",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "befaed85",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -223,27 +232,46 @@
     "ps.set_ground_plane_mode(\"none\")\n",
     "ps.set_up_dir(\"neg_y_up\")\n",
     "\n",
-    "screenshots = {}\n",
+    "screenshots = {d:{} for d in [\"Reg\",\"DT\"]}\n",
     "for mr in max_refinements:\n",
-    "    V, F = read_mesh(os.path.join(out_folder, f\"oiseaux_de_feu.obj_RegMTR_{N}_{mr}.obj\"))\n",
-    "    ps.remove_all_structures()\n",
-    "    ps.register_surface_mesh(\"fb\", V, F, color=to_rgb(\"tab:green\"))\n",
-    "    ps.look_at(*camera_views[\"firebird\"])\n",
-    "    screenshots[mr] = ps.screenshot_to_buffer()   \n",
-    "    \n",
+    "    for delaunay in [False, True]:\n",
+    "        kind = \"DT\" if delaunay else \"Reg\" \n",
+    "        fname = f\"oiseaux_de_feu.obj_{kind}MTR_{N}_{mr}.obj\"\n",
+    "        V, F = read_mesh(os.path.join(out_folder, fname))\n",
+    "        ps.remove_all_structures()\n",
+    "        clr = to_rgb(\"tab:orange\") if delaunay else to_rgb(\"tab:green\")\n",
+    "        ps.register_surface_mesh(f\"fb{kind}\", V, F, color=clr)\n",
+    "        ps.look_at(*camera_views[\"firebird\"])\n",
+    "        screenshots[kind][mr] = ps.screenshot_to_buffer()   \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0b1b715",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
     "import matplotlib.pyplot as plt\n",
-    "fig, axs = plt.subplots(1,4,figsize=(20,6))\n",
+    "fig, axs = plt.subplots(2,4,figsize=(20,12))\n",
     "\n",
-    "fig.suptitle(\"$\\mathbf{RC}_R$\",fontsize=30)\n",
-    "for ni,(mr,im) in enumerate(screenshots.items()):\n",
-    "    ax = axs[ni]\n",
-    "    ttl_ = f\"${N}^3$\" \n",
-    "    if mr > 0:\n",
-    "        ttl_ += f\"$+ {mr}R$\"\n",
-    "    ax.set_title(ttl_,fontsize=20)\n",
+    "#fig.suptitle(\"$\\mathbf{RC}_R$\",fontsize=30)\n",
+    "for ni,(k_,kscr) in enumerate(screenshots.items()):\n",
+    "    axs_ = axs[ni]\n",
+    "    vn_ = \"$\\mathbf{RC}_R$\" if k_ == \"Reg\" else \"$\\mathbf{DC}_D$\"\n",
+    "    axs_[0].annotate(vn_, [0,600.],fontsize=20)\n",
+    "    for mi,(mr,im) in enumerate(kscr.items()):\n",
+    "        ax = axs_[mi]\n",
+    "        ttl_ = f\"${N}^3$\" \n",
+    "        if mr > 0:\n",
+    "            ttl_ += f\"$+ {mr}R$\"\n",
+    "        ax.set_title(ttl_,fontsize=20)\n",
     "\n",
-    "    ax.imshow(screenshots[mr][100:-100:,700:-700])\n",
-    "    ax.axis(\"off\")\n",
+    "        ax.imshow(screenshots[k_][mr][100:-100:,700:-700])\n",
+    "        ax.axis(\"off\")\n",
     "plt.show()"
    ]
   }
@@ -264,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
